Fixed contrast on 'needs-work' text style

--- a/stylesheets/aitu.css
+++ b/stylesheets/aitu.css
@@ -29,6 +29,7 @@ h1, h2, h3 {
 
 span.needs-work {
   background: yellow;
+  color: black;
 }
 span.rewrite {
   background: red;
